Fix alignment glitch for issue #780

--- a/media/src/css/subtitle-editor/subtitle-editor.scss
+++ b/media/src/css/subtitle-editor/subtitle-editor.scss
@@ -788,7 +788,7 @@ section.main {
             height: 242px;
             width: 90%;
             display: table;
-            margin: 10px 0px 10px 30px;
+            margin: 10px 0px 0px 30px;
             padding: 5px;
             span.key {
                 width: 20%;
